# QSettingJson

./: .clang-format  CMakeLists.txt  LICENSE  QSettingsJson.cpp  QSettingsJson.h  README.md  TestQSettingsJson.cpp  TestQSettingsJson.h  main.cpp  stat
test/: CMakeLists.txt  TestQSettingsJson.cpp  TestQSettingsJson.h
